infra/routing/manifests/staging/install.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: default
spec:
  entryPoints:
  - websecure
  - metrics
  routes:
  - kind: Rule
    match: (Host(`prom.staging.ns.ubio.dev`))
    middlewares:
    - name: prometheus-basic-auth
    services:
    - name: prometheus
      namespace: monitoring
      port: 9090
  tls:
    options:
      name: secure
      namespace: default
    secretName: ubio-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-infra-cd
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`cd.staging.ns.ubio.dev`)
    priority: 10
    services:
    - name: argocd-server
      namespace: argocd
      port: 80
  - kind: Rule
    match: Host(`cd.staging.ns.ubio.dev`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      namespace: argocd
      port: 80
      scheme: h2c
  tls:
    secretName: ubio-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-infra-grafana
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.staging.ns.ubio.dev`)
    priority: 10
    services:
    - name: grafana
      namespace: monitoring
      port: 3000
  tls:
    secretName: ubio-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prometheus-basic-auth
  namespace: default
spec:
  basicAuth:
    realm: Prometheus
    secret: routing-auth-prometheus
